main | add some previewing stuff, add jib tool etc.
Signed-off-by: ivenpoker <ivenpoker@gmail.com>